feat: adds guest check pagination, dborm and menu item
