# domain/repo/repo_interface.go
@@ -18,6 +18,7 @@ type RepoInterface interface {
 	CreateGuestCheck(ctx context.Context, guestCheck *entity.GuestCheck) error
 	FindGuestCheck(ctx context.Context, guestCheckID *string) (*entity.GuestCheck, error)
 	SaveGuestCheck(ctx context.Context, guestCheck *entity.GuestCheck) error
+	SearchGuestChecks(ctx context.Context, searchGuestChecks *entity.SearchGuestChecks) ([]*entity.GuestCheck, *string, error)
 
 	CreateGuestCheckItem(ctx context.Context, guestCheckItem *entity.GuestCheckItem) error
 	FindGuestCheckItem(ctx context.Context, guestCheckID, guestCheckItemID *string) (*entity.GuestCheckItem, error)
@@ -28,4 +29,9 @@ type RepoInterface interface {
 	SaveEmployee(ctx context.Context, employee *entity.Employee) error
 
 	PublishEvent(ctx context.Context, topic, msg, key *string) error
+
+	CreateItem(ctx context.Context, item *entity.Item) error
+	FindItem(ctx context.Context, itemID *string) (*entity.Item, error)
+	UpdateItem(ctx context.Context, item *entity.Item) error
+	FindItemByCode(ctx context.Context, code *int) (*entity.Item, error)
 }
